deploy: skyfrk/esslinger.dev@638d54f7e0cb45111cee5c97f5624956a441b332

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 /static/bb26e9dafd2f480e66b146fd1881ef5a/32fd5/simon.jpg 450w,
 /static/bb26e9dafd2f480e66b146fd1881ef5a/4fe8c/simon.jpg 600w,
 /static/bb26e9dafd2f480e66b146fd1881ef5a/8329c/simon.jpg 2528w" src="/static/bb26e9dafd2f480e66b146fd1881ef5a/9dc27/simon.jpg" alt="" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/></picture></noscript></div><div><p>Hello world! I'm Simon and this is my personal tiny site on the internet.</p>
-<p>I enjoy programming (working with C#, JS, Azure, CI/CD-Systems amongst others), selfhosting stuff on my Linux servers, competitive games and traveling the world the minimalist digital native way. Oh, and I love Markdown, in fact this page was actually written in Markdown. 😁</p>
+<p>I enjoy programming (working with C#, JS, Azure, CI/CD-Systems amongst others), selfhosting stuff on my Linux servers, competitive games and traveling the world the minimalist digital native way. Oh, and I love Markdown, in fact this page was actually written in Markdown. 😁 Also, stop <a href="https://www.socialcooling.com/">social cooling</a>!</p>
 <p>Currently I'm working towards becoming a <em>DevOps / Backend Engineer</em> while finishing my degree.</p>
 <h4>Professional work</h4>
 <ul>
